--- a/index.html
+++ b/index.html
@@ -52,114 +52,7 @@ body {
 .my_tooltip::before{
 	display: none;
 }
-#info {
-    /* width: 340px; */
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    z-index: 10;
-    margin-left: -170px;
-    color: #155724;
-    background-color: #d4edda;
-    padding: 5px;
-    border: 1px solid transparent;
-    border-radius: 2.5px;
-}
-#info  input {
-    border: 1px solid #ccc;
-    display: inline-block;
-    width: 200px;
-    border-radius: 3px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
-}
-#info input:focus {
-    border-color: #66afe9;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6)
-}
-#button {
-    float: right;
-}
-.my_tooltip{
-	color: red;
-	background: transparent;
-	border: none;
-	font-size: 18px;
-}
-.my_tooltip::before{
-	display: none;
-}
-.addserch {
-        margin-top: 3px;
-    }
 
-    .latserch {
-        margin-top: 7px;
-    }
-
-    .latserch input {
-        width: 111px;
-        line-height: 10px;
-    }
-
-    .top_search .search_ul {
-		display: none;
-        list-style: none;
-        border-radius: 5px;
-        background: #fff;
-        padding: 2px 5px;
-    }
-
-    a {
-        color: #007bff;
-        text-decoration: none;
-        background-color: transparent;
-        -webkit-text-decoration-skip: objects;
-    }
-
-    .editbox {
-        position: absolute;
-        display: block;
-        border: 1px solid;
-        background-color: #007bff;
-        box-shadow: 0 0 0 10px beige;
-        top: 20px;
-        left: 20px;
-        z-index: 99;
-    }
-
-    .bigemap-draw-section {
-        top: 155px;
-    }
-    .opencontro {
-        position: absolute;
-        top: 131px;
-        left: 10px;
-        z-indx: 20;
-        z-index: 10;
-    }
-
-    .markertool {
-        color: red;
-    }
-
-    #clearbox {
-        position: absolute;
-        height: 27px;
-        width: 30px;
-        z-index: 10;
-        top: 335px;
-        left: 10px;
-        border: 1px solid;
-        display: none;
-        background-color: white;
-        pointer-events: none;
-    }
 </style>
 <title>地理资源展示系统</title>
 </head>
@@ -170,24 +63,7 @@ body {
 	<div class="controlitem grade"></div>
 	<div class="controlitem sub">-</div>
 </div>
-<!-- 搜素 -->
-<div id="info">
-	<div class="addserch" style="display: block">
-		<div class="top_search">
-			<input type="text" class="form-control" placeholder="搜索在线的数据" id="top_input">
-			<i data-operation="lat_lng_location" class="fa fa-map-marker"></i>
-			<i class="fa fa-search"></i>
-			<ul class="search_ul" style="display: none;">
-				<!-- <li><a data-title="成都站" data-operation="location" data-location="104.073739,30.697071" href="javascript:void(0);"><i class="fa fa-map-marker"></i>&nbsp; 成都站</a></li> -->
-			</ul>
-		</div>
-		<h5 class="showaddres" style="color: red;max-width: 200px;display: none;"></h5>
-	</div>
-	<!--   中间位置地图定位经纬度-->
-	<!-- <button id="button" class="button button-primary button-pill button-small">查询</button>
-	<input type="text" id="input" placeholder="搜索">
-	<div id="result"> </div> -->
-</div>
+
 <!-- 照片展示 -->
 <div class="pictureBox">
 	<div class="pictureContent">
@@ -205,7 +81,7 @@ body {
 
 <!--   左侧导航分类   -->
 <div class="operation-container BMap_noprint anchorTL" style="position: absolute; z-index: 10; text-size-adjust: none; bottom: auto; right: auto; top: 20px; left: 30px;">
-  <div class="operation-btn btn-street" title="街道划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/street.png">
+  <!-- <div class="operation-btn btn-street" title="街道划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/street.png">
     <div>街道划分</div>
   </div>
   <div class="operation-btn btn-community on" title="社区划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/community.png">
@@ -213,7 +89,7 @@ body {
   </div>
   <div class="operation-btn btn-schoolDistrict" title="显示学区"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/hat.png">
     <div>学区划分</div>
-  </div>
+  </div> -->
   <div class="operation-btn btn-building" title="商户主体"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/build.png">
     <div>商户主体</div>
   </div>
@@ -226,7 +102,41 @@ body {
 		<span class="treeBoxtitle"></span>
 		<span class="glyphicon glyphicon-remove" onclick="$('.treeBox').hide()" aria-hidden="true"></span>
 	</div>
+	<div class="treeSearch">
+		<input placeholder="请输入商家名称" class="treeSearchInput" type="text">
+		<div class="btnSearch">
+			<span class="seachQueqy">搜索</span>
+			<span class="seachRest">重置</span>
+		</div>
+		
+	</div>
 	<div class="tree">
+		<!-- <ul>
+			<li>
+				<div>区县1 <span class="unfold">-</span></div>
+				<ul>
+					<li>
+						<div>街道1.1 <span class="unfold">-</span></div>
+						<ul>
+							<li class="flexLi"><img src="./img/check.png" alt=""> <img class="iconImg" src="./img/business_marker_normal.png" alt="">商家</li>
+							<li>社区1 <span class="unfold">+</span></li>
+							<li>社区2 <span class="unfold">+</span></li>
+							<li>
+								<div>社区3 <span class="unfold">-</span></div>
+								<ul>
+									<li class="flexLi"><img src="./img/check.png" alt=""> <img class="iconImg" src="./img/business_marker_normal.png" alt="">商家3.1</li>
+									<li class="flexLi"><img src="./img/check.png" alt=""> <img class="iconImg" src="./img/business_marker_normal.png" alt="">商家3.2</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li><div>街道1.2 <span class="unfold">+</span></div></li>
+					<li><div>街道1.3 <span class="unfold">+</span></div></li>
+				</ul>
+			</li>
+			<li><div>区县2 <span class="unfold">+</span></div></li>
+			<li><div>区县3 <span class="unfold">+</span></div></li>
+		</ul> -->
 	</div>
 </div>
 
