--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ body {
   <div class="operation-btn btn-schoolDistrict" title="显示学区"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/hat.png">
     <div>学区划分</div>
   </div> -->
-  <div class="operation-btn btn-building" title="商户主体"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/build.png">
+  <div class="operation-btn btn-building" title="商户主体"> <img src="./img/build.png">
     <div>商户主体</div>
   </div>
-  <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/bag.png">
+  <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="./img/bag.png">
     <div>便民商圈</div>
   </div>
 </div>
