--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ body {
   </div>
 </div>
 <div class="treeBox">
+	
 	<div class="treeBoxtitleBox">
 		<span class="treeBoxtitle"></span>
 		<span class="glyphicon glyphicon-remove" onclick="$('.treeBox').hide()" aria-hidden="true"></span>
@@ -109,6 +110,28 @@ body {
 			<span class="seachRest">重置</span>
 		</div>
 		
+	</div>
+	<h5 style="text-align: center;
+    margin: 0;
+    padding-bottom: 3px;
+    background-color: #F8F8F8;">商家营业状态</h5>
+	<div class="colorContent">
+		<div class="colorItem">
+			<span class="colorBox colorBox1"></span>
+			<span class="colorName">正常营业</span>
+		</div>
+		<div class="colorItem">
+			<span class="colorBox colorBox2"></span>
+			<span class="colorName">无经营场所营业</span>
+		</div>
+		<div class="colorItem">
+			<span class="colorBox colorBox3"></span>
+			<span class="colorName">歇业</span>
+		</div>
+		<div class="colorItem">
+			<span class="colorBox colorBox4"></span>
+			<span class="colorName">吊销</span>
+		</div>
 	</div>
 	<div class="tree">
 		<!-- <ul>
