--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 	</div>
 	<h5 style="text-align: center;
     margin: 0;
-    padding-bottom: 3px;
+    padding: 3px 0;
     background-color: #F8F8F8;">商家营业状态</h5>
 	<div class="colorContent">
 		<div class="colorItem">
@@ -172,14 +172,15 @@ body {
 					<span class="glyphicon glyphicon-remove" onclick="$('#building').hide()" aria-hidden="true"></span>
 				</div>
 				<div class="showInfo">
+					
+					<div class="showInfoRight">
+					</div>
 					<div class="showInfoLeft">
 						<div class="showInfoLeftimg">
 							<!-- <img src="" alt="">
 							<img src="" alt=""> -->
 						</div>
 						
-					</div>
-					<div class="showInfoRight">
 					</div>
 				</div>
 			</div>
