--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ body {
 		</div>
 		
 	</div>
-	<h5 style="text-align: center;
+	<!-- <h5 style="text-align: center;
     margin: 0;
     padding: 3px 0;
-    background-color: #F8F8F8;">商家营业状态</h5>
+    background-color: #F8F8F8;">商家营业状态</h5> -->
 	<div class="colorContent">
 		<div class="colorItem">
 			<span class="colorBox colorBox1"></span>
