--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@ body {
   <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="./img/bag.png">
     <div>便民商圈</div>
   </div>
+  <div class="operation-btn btn-yunshu" title="运输户"> <img src="./img/yunshu.png">
+    <div>运输户</div>
+  </div>
+  <div class="operation-btn btn-wangdian" title="网店"> <img src="./img/wangdian.png">
+    <div>网&nbsp;&nbsp;&nbsp;&nbsp;店</div>
+  </div>
 </div>
 <div class="treeBox">
 	
