--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ body {
   <div class="operation-btn btn-building" title="商户主体"> <img src="./img/build.png">
     <div>商户主体</div>
   </div>
+  <div class="operation-btn btn-building btn-building1" title="商户主体"> <img src="./img/build.png">
+    <div>商户主体</div>
+  </div>
   <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="./img/bag.png">
     <div>便民商圈</div>
   </div>
@@ -122,19 +125,19 @@ body {
     padding: 3px 0;
     background-color: #F8F8F8;">商家营业状态</h5> -->
 	<div class="colorContent">
-		<div class="colorItem">
+		<div class="colorItem colorItemTrue">
 			<span class="colorBox colorBox1"></span>
 			<span class="colorName">正常营业</span>
 		</div>
-		<div class="colorItem">
+		<div class="colorItem colorItemTrue">
 			<span class="colorBox colorBox2"></span>
 			<span class="colorName">无经营场所营业</span>
 		</div>
-		<div class="colorItem">
+		<div class="colorItem colorItemFalse">
 			<span class="colorBox colorBox3"></span>
 			<span class="colorName">歇业</span>
 		</div>
-		<div class="colorItem">
+		<div class="colorItem colorItemFalse">
 			<span class="colorBox colorBox4"></span>
 			<span class="colorName">吊销</span>
 		</div>
