--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
 <div id='map'></div>
 
 <!--   左侧导航分类   -->
-<div class="operation-container BMap_noprint anchorTL" style="position: absolute; z-index: 10; text-size-adjust: none; bottom: auto; right: auto; top: 20px; left: 30px;">
+<div class="operation-container BMap_noprint anchorTL" style="position: absolute; z-index: 10; text-size-adjust: none; bottom: auto; right: auto; top: 0px; left: 0px;display: flex;">
   <!-- <div class="operation-btn btn-street" title="街道划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/street.png">
     <div>街道划分</div>
   </div>
@@ -181,16 +181,12 @@ body {
 					<span class="glyphicon glyphicon-remove" onclick="$('#building').hide()" aria-hidden="true"></span>
 				</div>
 				<div class="showInfo">
-					
 					<div class="showInfoRight">
 					</div>
-					<div class="showInfoLeft">
+					<!-- <div class="showInfoLeft">
 						<div class="showInfoLeftimg">
-							<!-- <img src="" alt="">
-							<img src="" alt=""> -->
 						</div>
-						
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
