--- a/index.html
+++ b/index.html
@@ -110,7 +110,25 @@ body {
 	
 	<div class="treeBoxtitleBox">
 		<span class="treeBoxtitle"></span>
-		<span class="glyphicon glyphicon-remove" onclick="$('.treeBox').hide()" aria-hidden="true"></span>
+		<div class="colorContent">
+			<!-- <div class="colorItem">
+				<span class="colorBox colorBox1"></span>
+				<span class="colorName">正常营业</span>
+			</div>
+			<div class="colorItem">
+				<span class="colorBox colorBox2"></span>
+				<span class="colorName">无经营场所营业</span>
+			</div>
+			<div class="colorItem">
+				<span class="colorBox colorBox3"></span>
+				<span class="colorName">歇业</span>
+			</div>
+			<div class="colorItem">
+				<span class="colorBox colorBox4"></span>
+				<span class="colorName">吊销</span>
+			</div> 
+			<span class="glyphicon glyphicon-remove" style="margin-left: 5px;" onclick="$('.treeBox').hide()" aria-hidden="true"></span> -->
+		</div>
 	</div>
 	<div class="treeSearch">
 		<input placeholder="请输入商家名称" class="treeSearchInput" type="text">
@@ -124,7 +142,7 @@ body {
     margin: 0;
     padding: 3px 0;
     background-color: #F8F8F8;">商家营业状态</h5> -->
-	<div class="colorContent">
+	<!-- <div class="colorContent">
 		<div class="colorItem colorItemTrue">
 			<span class="colorBox colorBox1"></span>
 			<span class="colorName">正常营业</span>
@@ -141,7 +159,7 @@ body {
 			<span class="colorBox colorBox4"></span>
 			<span class="colorName">吊销</span>
 		</div>
-	</div>
+	</div> -->
 	<div class="tree">
 		<!-- <ul>
 			<li>
