修改商户主体名称

--- a/index.html
+++ b/index.html
@@ -81,20 +81,11 @@ body {
 
 <!--   左侧导航分类   -->
 <div class="operation-container BMap_noprint anchorTL" style="position: absolute; z-index: 10; text-size-adjust: none; bottom: auto; right: auto; top: 0px; left: 0px;display: flex;">
-  <!-- <div class="operation-btn btn-street" title="街道划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/street.png">
-    <div>街道划分</div>
-  </div>
-  <div class="operation-btn btn-community on" title="社区划分"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/community.png">
-    <div>社区划分</div>
-  </div>
-  <div class="operation-btn btn-schoolDistrict" title="显示学区"> <img src="http://map.dlzs.gov.cn:8080/zs_gis/PGIS/zs/images/hat.png">
-    <div>学区划分</div>
-  </div> -->
   <div class="operation-btn btn-building" title="商户主体"> <img src="./img/build.png">
     <div>商户主体</div>
   </div>
-  <div class="operation-btn btn-building btn-building1" title="商户主体"> <img src="./img/build.png">
-    <div>商户主体</div>
+  <div class="operation-btn btn-building btn-building1" title="吊/注销商户"> <img src="./img/build.png">
+    <div>吊/注销商户</div>
   </div>
   <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="./img/bag.png">
     <div>便民商圈</div>
