--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body {
   <div class="operation-btn btn-building" title="商户主体"> <img src="./img/build.png">
     <div>商户主体</div>
   </div>
-  <div class="operation-btn btn-building btn-building1" title="吊/注销商户"> <img src="./img/build.png">
+  <div class="operation-btn  btn-building1" title="吊/注销商户"> <img src="./img/build.png">
     <div>吊/注销商户</div>
   </div>
   <div class="operation-btn btn-businessDistrict" title="便民商圈"> <img src="./img/bag.png">
