--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         http://localhost:9000/bigemap.js/v2.1.0/bigemap.css
         软件下载地址 http://www.bigemap.com/reader/download/detail201802017.html
     -->
-<link href='http://map.qthscditu.com:9000/bigemap.js/v2.1.0/bigemap.css' rel='stylesheet' />
+<link href='http://49.232.203.212:9000/bigemap.js/v2.1.0/bigemap.css' rel='stylesheet' />
 <link href="https://cdn.bootcss.com/Buttons/2.0.0/css/buttons.min.css" rel="stylesheet">
 <link href="./css/left.css" rel="stylesheet">
 <link href="./css/center.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!-- <link href="./css/index.css" rel="stylesheet"> -->
 <!-- <script src="./js/indexmap.js"></script> -->
-<script type="text/javascript" src='http://map.qthscditu.com:9000/bigemap.js/v2.1.0/bigemap.js'></script>
+<script type="text/javascript" src='http://49.232.203.212:9000/bigemap.js/v2.1.0/bigemap.js'></script>
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script  type="text" src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script> -->
