--- a/mobile.html
+++ b/mobile.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-12-06 15:50:32
- * @LastEditTime: 2020-12-19 22:50:47
+ * @LastEditTime: 2020-12-20 18:25:40
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /webMapApp/mobile.html
@@ -17,7 +17,7 @@
   <link href="https://cdn.bootcss.com/Buttons/2.0.0/css/buttons.min.css" rel="stylesheet">
   <link href="./css/mobile.css" rel="stylesheet">
   <link href="./css/pick.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script type="text/javascript" src='http://49.232.203.212:9000/bigemap.js/v2.1.0/bigemap.js'></script>
@@ -27,7 +27,7 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="./js/rem.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/mui/3.7.1/js/mui.min.js"></script>
-
+  <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -122,10 +122,13 @@
   <div class="pictureBox">
     <div class="pictureContent">
       <div class="picturePanel">
-        
+        <img class="bigPic"  src="" alt="...">
       </div>
     </div>
     <!-- <span class="glyphicon glyphicon-remove-circle" onclick="$('.pictureBox').hide()" aria-hidden="true"></span> -->
+  </div>
+  <div class="loddingContent">
+    <div class="loddingmsg">lodding...</div>
   </div>
   <div id='map'></div>
   <!-- 头部搜索 -->
